<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="50dp">

        <LinearLayout
            android:id="@+id/topLogoRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:id="@+id/logoRegister"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:background="@drawable/icon"
                android:layout_margin="30dp"
                android:transitionName="mainLogoTransition"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="60dp"
            android:layout_below="@id/topLogoRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/emailFieldRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/button_rounded_rectangle_green"
                android:drawableStart="@drawable/ic_baseline_person_outline_24"
                android:drawableLeft="@drawable/ic_baseline_person_outline_24"
                android:drawablePadding="10dp"
                android:fontFamily="@font/roboto_light"
                android:textCursorDrawable="@null"

                android:hint="@string/emailHint"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp"

                android:inputType="textEmailAddress"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/white"
                >
                <EditText
                    android:id="@+id/passwordFieldRegister"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/button_rounded_rectangle_green"
                    android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                    android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                    android:drawablePadding="10dp"
                    android:textCursorDrawable="@null"

                    android:imeOptions="actionNext"

                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/createpassword"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"

                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false"
                app:passwordToggleTint="@color/white"

                >
                <EditText
                    android:id="@+id/passwordConfirmFieldRegister"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginVertical="10dp"
                    android:background="@drawable/button_rounded_rectangle_green"
                    android:drawableStart="@drawable/ic_baseline_vpn_key_24"
                    android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
                    android:drawablePadding="10dp"
                    android:imeOptions="actionNext"
                    android:textCursorDrawable="@null"

                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/confirmpassword"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="18sp"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_rounded_rectangle_white"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/color_primary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:paddingHorizontal="10dp"
                android:layout_marginVertical="10dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>
        </LinearLayout>



        <LinearLayout
            android:id="@+id/signInHereText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="20dp">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alreadyHaveAccount"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_light"
                android:textSize="12sp"/>

            <View
                android:layout_width="5dp"
                android:layout_height="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signinHere"
                android:id="@+id/gotosignin"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:textSize="12sp"/>

        </LinearLayout>


        <ProgressBar

            android:id="@+id/progressBarRegister"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>


    </RelativeLayout>
</ScrollView>

